--- a/Passion-Project/Views/Home/Contact.cshtml
+++ b/Passion-Project/Views/Home/Contact.cshtml
@@ -2,16 +2,15 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    310 Dundas Street<br />
+    Toronto, ON N6A 3R6<br />
     <abbr title="Phone">P:</abbr>
     425.555.0100
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:worldcuisinesupport@yahoo.com">worldcuisinesupport@yahoo.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:worldcuisinemarketing@gmail.com">worldcuisinemarketing@gmail.com</a>
 </address>
