--- a/Passion-Project/Views/Home/Index.cshtml
+++ b/Passion-Project/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Take out your notes and get ready to note down some handsome dishes!</h2>
         <p>
             Want to learn how to make the world class mouth watering Pizza?
             Want to learn how to get the cheesy cream inside your cake's crust?
